# rheometer

./: .gitignore  CMakeLists.txt  README.md  all_params.txt  all_params_actual_func_simu_k_50000.txt  format_data.py  read_serial.py  requirements.txt  test
andreas_code/comp_simulation/: comp_simulation.pde
arduino-mmt/sketch_apr14a/: sketch_apr14a.ino
arduino-rheometer/: arduino-rheometer.ino  testadd.ino
previous_work/rheometer_project/: rheometer_project.ino
rheometer/: feedback_funcs.ino  pc_input_debugger.c  pc_io.ino  rheometer.ino  setup.ino  tc_handler.ino
rheometer/gui/: gui.pde
samples/: rheometer_project_1_9.pde
samples/rheometer_project_1_9/: Variable labels.txt  feedback_funcs.h  rheo_data_1_2_2017.txt  rheometer_project_1_9.ino  rheometer_project_1_9.pde
simulations/: c_talker.py  conditional_pend.py  config.yaml  experiments.py  extras.py  feedback_funcs.cpp  frontend.py  helpers.py  main.py  measure_feedback  measure_feedback.c  measure_feedback.cpp  pc_io.cpp  pendulum.cc  results-rkf45.txt  results.txt  runge-kutta  runge-kutta.cpp  test  test.cpp  test.py  theory_calc.py
simulations/configs/: FFTwNR.yaml  FixedStepIntegrator.yaml  MeasuringAccuracy.yaml  NRRegimes.yaml  NRRegimesPython.yaml  ReadAllData.yaml  TheoryVsFourier.yaml  TheoryVsSimulation.yaml  measured_vals.yaml
simulations/configs_and_testing/: Experiment.yaml  MeasuringAccuracy.yaml  testing.py
simulations/experiment/: c_talker.py  caller.py  conditional_pend.py  experiments.py  extra_functions_unused.py  extras.py  fourier_decomp.py  helpers.py  imshow_plotter.py  measure_feedback.c  measurement.py  noise_delays.py  plot_response.py  plotter.py  read_from_csv.py  read_saved.py  rk4_solver.py  theory.py  theory_calc.py  theory_calc2.py
simulations/experiment/docs/: caller.html  conditional_pend.html  experiments.html  (+7 more)
simulations/extras/: extras.py  theory_calc.py
test_code/: context_man_test.py  generate-sine-from-hardcoded-hexes.py  ode_tester.py  test.c  test.cpp  test.py
test_code/boost-testing/: boost-test.py  example.c  example.cpp  example.py
